UnifyNetSDK/haikang/hk_playsdk_wrapper.py


# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 753
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_FEC_GetCurrentPTZPort", "cdecl"):
    PlayM4_FEC_GetCurrentPTZPort = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_FEC_GetCurrentPTZPort", "cdecl")
    PlayM4_FEC_GetCurrentPTZPort.argtypes = [LONG, c_float, c_float, POINTER(c_uint)]
    PlayM4_FEC_GetCurrentPTZPort.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 754
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_FEC_SetCurrentPTZPort", "cdecl"):
    PlayM4_FEC_SetCurrentPTZPort = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_FEC_SetCurrentPTZPort", "cdecl")
    PlayM4_FEC_SetCurrentPTZPort.argtypes = [LONG, c_uint]
    PlayM4_FEC_SetCurrentPTZPort.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 755
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_FEC_SetPTZOutLineShowMode", "cdecl"):
    PlayM4_FEC_SetPTZOutLineShowMode = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_FEC_SetPTZOutLineShowMode", "cdecl")
    PlayM4_FEC_SetPTZOutLineShowMode.argtypes = [LONG, FECSHOWMODE]
    PlayM4_FEC_SetPTZOutLineShowMode.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 756
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_FEC_GetViewParam", "cdecl"):
    PlayM4_FEC_GetViewParam = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_FEC_GetViewParam", "cdecl")
    PlayM4_FEC_GetViewParam.argtypes = [LONG, c_uint, PLAYM4HRVIEWPARAMTYPE, POINTER(c_float)]
    PlayM4_FEC_GetViewParam.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 757
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_FEC_SetViewParam", "cdecl"):
    PlayM4_FEC_SetViewParam = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_FEC_SetViewParam", "cdecl")
    PlayM4_FEC_SetViewParam.argtypes = [LONG, c_uint, PLAYM4HRVIEWPARAMTYPE, c_float]
    PlayM4_FEC_SetViewParam.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 758
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_FEC_SetDisplayRegion", "cdecl"):
    PlayM4_FEC_SetDisplayRegion = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_FEC_SetDisplayRegion", "cdecl")
    PlayM4_FEC_SetDisplayRegion.argtypes = [LONG, c_uint, c_uint, DWORD, POINTER(RECT), HWND, BOOL]
    PlayM4_FEC_SetDisplayRegion.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 759
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_FEC_SetCorrectEffect", "cdecl"):
    PlayM4_FEC_SetCorrectEffect = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_FEC_SetCorrectEffect", "cdecl")
    PlayM4_FEC_SetCorrectEffect.argtypes = [LONG, c_uint, FECCORRECTEFFECT, c_float]
    PlayM4_FEC_SetCorrectEffect.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 760
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_FEC_Set3DModelParam", "cdecl"):
    PlayM4_FEC_Set3DModelParam = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_FEC_Set3DModelParam", "cdecl")
    PlayM4_FEC_Set3DModelParam.argtypes = [c_int, c_uint, PLAYM4FEC3DMODELPARAM, c_float]
    PlayM4_FEC_Set3DModelParam.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 761
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_FEC_GetSpecialViewParam", "cdecl"):
    PlayM4_FEC_GetSpecialViewParam = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_FEC_GetSpecialViewParam", "cdecl")
    PlayM4_FEC_GetSpecialViewParam.argtypes = [c_int, c_uint, PLAYM4FECSPECIALVIEWTYPE, PLAYM4HRVIEWPARAMTYPE, POINTER(c_float)]
    PlayM4_FEC_GetSpecialViewParam.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 784
class struct__PLAYM4_VIE_DYNPARAM_(Structure):
    pass

struct__PLAYM4_VIE_DYNPARAM_.__slots__ = [
    'moduFlag',
    'brightVal',
    'contrastVal',
    'colorVal',
    'toneScale',
    'toneGain',
    'toneOffset',
    'toneColor',
    'dehazeLevel',
    'dehazeTrans',
    'dehazeBright',
    'denoiseLevel',
    'usmAmount',
    'usmRadius',
    'usmThreshold',
    'deblockLevel',
    'lensWarp',
    'lensZoom',
]
struct__PLAYM4_VIE_DYNPARAM_._fields_ = [
    ('moduFlag', c_int),
    ('brightVal', c_int),
    ('contrastVal', c_int),
    ('colorVal', c_int),
    ('toneScale', c_int),
    ('toneGain', c_int),
    ('toneOffset', c_int),
    ('toneColor', c_int),
    ('dehazeLevel', c_int),
    ('dehazeTrans', c_int),
    ('dehazeBright', c_int),
    ('denoiseLevel', c_int),
    ('usmAmount', c_int),
    ('usmRadius', c_int),
    ('usmThreshold', c_int),
    ('deblockLevel', c_int),
    ('lensWarp', c_int),
    ('lensZoom', c_int),
]

PLAYM4_VIE_PARACONFIG = struct__PLAYM4_VIE_DYNPARAM_# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 784

enum__PLAYM4_VIE_MODULES = c_int# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 795

PLAYM4_VIE_MODU_ADJ = 0x00000001# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 795

PLAYM4_VIE_MODU_EHAN = 0x00000002# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 795

PLAYM4_VIE_MODU_DEHAZE = 0x00000004# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 795

PLAYM4_VIE_MODU_DENOISE = 0x00000008# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 795

PLAYM4_VIE_MODU_SHARPEN = 0x00000010# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 795

PLAYM4_VIE_MODU_DEBLOCK = 0x00000020# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 795

PLAYM4_VIE_MODU_CRB = 0x00000040# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 795

PLAYM4_VIE_MODU_LENS = 0x00000080# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 795

PLAYM4_VIE_MODULES = enum__PLAYM4_VIE_MODULES# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 795

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 797
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_VIE_SetModuConfig", "cdecl"):
    PlayM4_VIE_SetModuConfig = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_VIE_SetModuConfig", "cdecl")
    PlayM4_VIE_SetModuConfig.argtypes = [LONG, c_int, BOOL]
    PlayM4_VIE_SetModuConfig.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 798
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_VIE_SetRegion", "cdecl"):
    PlayM4_VIE_SetRegion = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_VIE_SetRegion", "cdecl")
    PlayM4_VIE_SetRegion.argtypes = [LONG, LONG, POINTER(RECT)]
    PlayM4_VIE_SetRegion.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 799
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_VIE_GetModuConfig", "cdecl"):
    PlayM4_VIE_GetModuConfig = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_VIE_GetModuConfig", "cdecl")
    PlayM4_VIE_GetModuConfig.argtypes = [LONG, POINTER(c_int)]
    PlayM4_VIE_GetModuConfig.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 800
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_VIE_SetParaConfig", "cdecl"):
    PlayM4_VIE_SetParaConfig = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_VIE_SetParaConfig", "cdecl")
    PlayM4_VIE_SetParaConfig.argtypes = [LONG, POINTER(PLAYM4_VIE_PARACONFIG)]
    PlayM4_VIE_SetParaConfig.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 801
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_VIE_GetParaConfig", "cdecl"):
    PlayM4_VIE_GetParaConfig = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_VIE_GetParaConfig", "cdecl")
    PlayM4_VIE_GetParaConfig.argtypes = [LONG, POINTER(PLAYM4_VIE_PARACONFIG)]
    PlayM4_VIE_GetParaConfig.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 809
class struct_anon_410(Structure):
    pass

struct_anon_410.__slots__ = [
    'lDataType',
    'lDataStrVersion',
    'lDataTimeStamp',
    'lDataLength',
    'pData',
]
struct_anon_410._fields_ = [
    ('lDataType', c_long),
    ('lDataStrVersion', c_long),
    ('lDataTimeStamp', c_long),
    ('lDataLength', c_long),
    ('pData', String),
]

AdditionDataInfo = struct_anon_410# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 809

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 810
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetAdditionDataCallBack", "cdecl"):
    PlayM4_SetAdditionDataCallBack = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetAdditionDataCallBack", "cdecl")
    PlayM4_SetAdditionDataCallBack.argtypes = [LONG, DWORD, CFUNCTYPE(UNCHECKED(None), c_long, POINTER(AdditionDataInfo), POINTER(None)), POINTER(None)]
    PlayM4_SetAdditionDataCallBack.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 813
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetDecodeEngineEx", "cdecl"):
    PlayM4_SetDecodeEngineEx = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetDecodeEngineEx", "cdecl")
    PlayM4_SetDecodeEngineEx.argtypes = [LONG, DWORD]
    PlayM4_SetDecodeEngineEx.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 814
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetDecodeEngine", "cdecl"):
    PlayM4_GetDecodeEngine = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetDecodeEngine", "cdecl")
    PlayM4_GetDecodeEngine.argtypes = [LONG]
    PlayM4_GetDecodeEngine.restype = DWORD

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 848
class struct_anon_411(Structure):
    pass

struct_anon_411.__slots__ = [
    'nRunTimeModule',
    'nStrVersion',
    'nFrameTimeStamp',
    'nFrameNum',
    'nErrorCode',
    'reserved',
]
struct_anon_411._fields_ = [
    ('nRunTimeModule', c_int),
    ('nStrVersion', c_int),
    ('nFrameTimeStamp', c_int),
    ('nFrameNum', c_int),
    ('nErrorCode', c_int),
    ('reserved', c_ubyte * int(12)),
]

RunTimeInfo = struct_anon_411# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 848
